# BlackBoxRadarAttacks

./: .gitignore  Readme.md
CPP Development_Archive/cross_corr/: CMakeLists.txt  main.cpp
CPP Development_Archive/cross_corr/src/: BufferHandler.hpp  CMakeLists.txt  CrossCorr.hpp
FMCW_radar_uhd/: CMakeLists.txt  Config_FMCW.json  Config_uhd.json  Config_uhd_attack.json  Config_uhd_attack_200us_to_400us.json  Config_uhd_attack_400us_to_500us.json  Config_uhd_attack_50us_to_200us.json  Config_uhd_attack_revA.json  Config_uhd_victim_200us_to_400us.json  Config_uhd_victim_400us_to_500us.json  Config_uhd_victim_50us_to_200us.json  main.cpp
MATLAB/: 100MHz_target.csv  1GHz_target.csv  1_GHz_spoofing_performance.csv  20MHz_target.csv  4_GHz_spoofing_performance.csv  Chirp_Cycle_Period_absolute_error_summary.csv  Chirp_Period_absolute_error_summary.csv  Chirp_Slope_absolute_error_summary.csv  Chirp_Slope_relative_error_summary.csv  Compute_radar_settings.mlx  DIAG_USRP_Attack_system.mlx  DIAG_USRP_Sensing.mlx  EVAL_SIM_attack_subsystem.mlx  EVAL_SIM_sensing_system.mlx  EVAL_USRP_attack_system.mlx  EVAL_USRP_sensing_system.mlx  Frame_Period_Estimation_absolute_error_summary.csv  Radar_Signal_Processor_revA.asv  Radar_Signal_Processor_revA.m  Range_Spoofing_absolute_error_summary.csv  SETUP_detecting_randomization.mlx  SIM_attack_radar_simulation.mlx  Simulator_revB.m  Subsystem_attacking.asv  Subsystem_attacking.m  Subsystem_spectrum_sensing.m  USRP_attack_subsystem_spoofing_performance.csv  USRP_offline_victim_processing.mlx  USRP_test_data_parameter_estimations.csv  (+12 more)
(+51 files in other folders)
